--- a/{{cookiecutter.project_slug}}/Pipfile
+++ b/{{cookiecutter.project_slug}}/Pipfile
@@ -29,7 +29,7 @@ django-redis-sessions = "*"
 schedule = "*"
 uWSGI = "*"
 {% endif -%}
-djangorestframework = "<3.9"
+djangorestframework = "*"
 django-rest-auth = "*"
 django_polymorphic = "*"
 django-admin-sortable2 = "*"
@@ -41,7 +41,8 @@ phonenumbers = "*"
 djangocms-bootstrap = "*"
 elasticsearch = "<1.8"
 libsass = "*"
-django-shop = "<1.2"
+#django-shop = "<1.2"
+"b26de6a" = {file = "https://github.com/awesto/django-shop/archive/releases/1.2.x.zip"}
 {% if cookiecutter.use_stripe == 'y' -%}
 djangoshop-stripe = "*"  {# "{{ cookiecutter.version }}" #}
 stripe = "<1.54"
