--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ script:
   - sh tests/test_docker.sh
 
 install:
+  - pip install autopep8
+  - pip install cookiecutter
   - pip install tox
 
 notifications:
