.dockerignore  if travis =="y" !docker-compose.yml

--- a/{{cookiecutter.project_slug}}/.dockerignore
+++ b/{{cookiecutter.project_slug}}/.dockerignore
@@ -1,6 +1,9 @@
 *
 !docker-files
 !{{ cookiecutter.app_name }}
+{%- if cookiecutter.travis == "y" %}
+!docker-compose.yml
+{%- endif %}
 !.coveragerc
 !.pylintrc
 !manage.py
