--- a/{{cookiecutter.project_slug}}/.dockerignore
+++ b/{{cookiecutter.project_slug}}/.dockerignore
@@ -1,7 +1,7 @@
 *
 !docker-files
 !{{ cookiecutter.app_name }}
-{%- if cookiecutter.dockerize == "runserver" %}
+{%- if cookiecutter.dockerize == "runserveroff" %}
 !docker-compose.yml
 {%- endif %}
 !.coveragerc
