--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,18 @@ language: python
 python: 3.6
 
 env:
-  global:
-    - TOX_ENV=py36
+  - TOX_ENV=py36
 
 before_install:
   - docker-compose -v
   - docker -v
+  - npm install -g npm@latest
 
 script:
-  - tox
+  - tox -e $TOX_ENV
   - sh tests/test_docker.sh
 
 install:
-  - pip install autopep8
-  - pip install cookiecutter
   - pip install tox
 
 notifications:
