--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -36,6 +36,7 @@ services:
 
   webapp:
     restart: always
+    user: "${UID}:${GID}"
     build:
       context: .
       dockerfile: docker-files/webapp.dockerfile
