--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,13 @@ sudo: required
 
 services:
   - docker
-
-
-services:
-  django:
-    volumes:
-      - .:/.
     
 language: python
 
 python: 3.6
 
-env:
-  - TOX_ENV=py36
+#env:
+#  - TOX_ENV=py36
 
 before_install:
   - docker-compose -v
