--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ python: 3.6
 before_install:
   - docker-compose -v
   - docker -v
-  - npm install -g npm@latest
+  #- npm install -g npm@latest
 
 script:
   #- tox -e $TOX_ENV
   - sh tests/test_docker.sh
 
-install:
-  - pip install tox
+#install:
+  #- pip install tox
 
 notifications:
   email:
