--- a/{{cookiecutter.project_slug}}/Pipfile
+++ b/{{cookiecutter.project_slug}}/Pipfile
@@ -48,7 +48,8 @@ djangoshop-stripe = "*"  {# "{{ cookiecutter.version }}" #}
 stripe = "<1.54"
 {% endif -%}
 {% if cookiecutter.use_paypal == 'y' -%}
-djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
+#djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
+djangoshop-paypal = {file = "https://github.com/haricot/djangoshop-paypal/archive/patch-1.zip"}
 paypalrestsdk = "<2"
 {% endif -%}
 {% if cookiecutter.use_sendcloud == 'y' -%}
