--- a/{{cookiecutter.project_slug}}/Pipfile
+++ b/{{cookiecutter.project_slug}}/Pipfile
@@ -41,13 +41,15 @@ phonenumbers = "*"
 djangocms-bootstrap = "*"
 elasticsearch = "<1.8"
 libsass = "*"
-django-shop = "<1.2"
+#django-shop = "<1.2"
+"b26de6a" = {file = "https://github.com/awesto/django-shop/archive/releases/1.2.zip"}
 {% if cookiecutter.use_stripe == 'y' -%}
 djangoshop-stripe = "*"  {# "{{ cookiecutter.version }}" #}
 stripe = "<1.54"
 {% endif -%}
 {% if cookiecutter.use_paypal == 'y' -%}
-djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
+#djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
+djangoshop-paypal = {file = "https://github.com/haricot/djangoshop-paypal/archive/django2.zip"}
 paypalrestsdk = "<2"
 {% endif -%}
 {% if cookiecutter.use_sendcloud == 'y' -%}
