--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -46,17 +46,20 @@ phonenumbers = "*"
 djangocms-bootstrap = "*"
 elasticsearch = "<1.8"
 libsass = "*"
-django-shop = "<1.2"
+#django-shop = "<1.2"
+django-shop = { git = "https://github.com/haricot/django-shop.git", branch="releases/1.2" }
 {% if cookiecutter.use_stripe == 'y' -%}
 djangoshop-stripe = "*"  {# "{{ cookiecutter.version }}" #}
 stripe = "<1.54"
 {% endif -%}
 {% if cookiecutter.use_paypal == 'y' -%}
-djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
+#djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
+djangoshop-paypal = { git = "https://github.com/haricot/djangoshop-paypal.git", branch="django2" }
 paypalrestsdk = "<2"
 {% endif -%}
 {% if cookiecutter.use_sendcloud == 'y' -%}
-djangoshop-sendcloud = "*"  {# "{{ cookiecutter.version }}" #}
+#djangoshop-sendcloud = "*"  {# "{{ cookiecutter.version }}" #}
+djangoshop_sendcloud = { git = "https://github.com/haricot/djangoshop-sendcloud.git", branch="wip_django2" }
 {% endif -%}
 
 [dev-packages]
@@ -73,3 +76,4 @@ autopep8 = "*"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
