--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -9,14 +9,14 @@ authors = ["{{ cookiecutter.author_name }}"]
 python = "^3.6"
 
 [tool.poetry.dev-dependencies]
-django = "<3"
-djangocms-cascade = "*"
+django = "<2.3"
+djangocms-cascade =  { git = "https://github.com/haricot/djangocms-cascade.git", branch="cascade_mix" }
 {% if cookiecutter.use_compressor == 'y' -%}
 django-compressor = "*"
 {% endif -%}
 django-allauth = "*"
 django-angular = "*"
-django-filer = "*"
+django-filer =  { git = "https://github.com/haricot/django-filer", branch="filer_mix" }
 django-ipware = "*"
 django-sass-processor = "*"
 django-select2 = "*"
@@ -36,7 +36,7 @@ uWSGI = "*"
 {% endif -%}
 djangorestframework = "<3.9.4"
 django-rest-auth = "*"
-django_polymorphic = "*"
+django_polymorphic = "<=2.0.3" # filer dep
 django-admin-sortable2 = "*"
 django-fsm = "*"
 django-fsm-admin = "*"
@@ -47,19 +47,19 @@ djangocms-bootstrap = "*"
 elasticsearch = "<1.8"
 libsass = "*"
 #django-shop = "<1.2"
-django-shop = { git = "https://github.com/awesto/django-shop.git", branch="releases/1.2" }
+#django-shop = { git = "https://github.com/awesto/django-shop.git", branch="releases/1.2" }
+django-shop = { git = "https://github.com/haricot/django-shop.git", branch="shop_mix_tmp" }
 {% if cookiecutter.use_stripe == 'y' -%}
 djangoshop-stripe = "*"  {# "{{ cookiecutter.version }}" #}
 stripe = "<1.54"
 {% endif -%}
 {% if cookiecutter.use_paypal == 'y' -%}
-#djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
-djangoshop-paypal = { git = "https://github.com/haricot/djangoshop-paypal.git", branch="django2" }
+djangoshop-paypal = "*"  {# "{{ cookiecutter.version }}" #}
 paypalrestsdk = "<2"
 {% endif -%}
 {% if cookiecutter.use_sendcloud == 'y' -%}
-#djangoshop-sendcloud = "*"  {# "{{ cookiecutter.version }}" #}
-djangoshop_sendcloud = { git = "https://github.com/haricot/djangoshop-sendcloud.git", branch="wip_django2" }
+djangoshop-sendcloud = "*"  {# "{{ cookiecutter.version }}" #}
+#djangoshop_sendcloud = { git = "https://github.com/haricot/djangoshop-sendcloud.git", branch="wip_django2" }
 {% endif -%}
 
 [dev-packages]
@@ -72,8 +72,6 @@ factory-boy = "*"
 pytest-factoryboy = "*"
 autopep8 = "*"
 
-
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
