psycopg2-binary need same distribution package

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -28,7 +28,7 @@ django-parler = "*"
 django-parler-rest = "*"
 {% endif -%}
 {% if cookiecutter.dockerize != "n" -%}
-psycopg2-binary = "<2.8"
+psycopg2-binary = "<=2.8.4" # same host distribution package psycopg2
 django-redis-cache = "*"
 django-redis-sessions = "*"
 schedule = "*"
